# context_translate

./: .gitignore  Cargo.toml  README.md
blender_plugin/text_translator_csv/: __init__.py  exporter_csv.py  importer_animated_subs_csv.py  importer_csv.py
docs/Media/: BlenderPluginExample.mkv
examples/manga/: options.json  system_prompt.txt
src/: error.rs  main.rs  ods_reader.rs  open_ai.rs
