[package]
name = "context_translate"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
csv = "1.3.1"
icu_locale_core = "2.1.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
spreadsheet-ods = "1.0.2"
tokio = { version = "1.49.0", features = ["full"] }
writeable = "0.6.2"
